--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ p {
               url("../images/Banner\ Image.png");
   width: 1320px;
   height: 600px;
-  border-radius: 16;
+  border-radius: 16px;
   margin-top: 50px;
   text-align: center;
   color: white;
